--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav-bar">
-        <div class="logo">
-          <a href="/"
-            ><img src="./assets/img/senim logo original.svg" alt="image"
-          /></a>
-        </div>
+      <nav class="navbar">
+        <img src="./assets/img/footer original.png" alt="img" />
 
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">О нас</a></li>
-          <li><a href="#">Преимущества</a></li>
-          <li><a href="#">Контакты</a></li>
+        <button class="burger" id="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
+        <ul class="nav-links" id="navLinks">
+          <li><a href="/">Главная</a></li>
+          <li><a href="/">Услуги</a></li>
+          <li><a href="/">О нас</a></li>
+          <li><a href="/">Преимущества</a></li>
+          <li><a href="/">Контакты</a></li>
         </ul>
 
-        <div class="phone"><p>+7 (776) 666-66-42</p></div>
+        <a href="/" class="navbar-number">+7 (776) 666-66-42</a>
       </nav>
       <section class="hero-container">
         <div class="hero-content">
@@ -387,7 +389,7 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-left">
-          <img src="./assets/img/logo-senim 1.svg" alt="logo" />
+          <img src="./assets/img/footer original.png" alt="logo" />
 
           <div class="footer-left__text">
             <h3>Наркологическая клиника Senim Detox</h3>
@@ -395,9 +397,15 @@
           </div>
 
           <div class="footer-socials">
-            <a href="/"><img src="./assets/img/whatsapp.png" alt="img" /></a>
-            <a href="/"><img src="./assets/img/telegram.png" alt="img" /></a>
-            <a href="/"><img src="./assets/img/instagram.png" alt="img" /></a>
+            <a href="#"
+              ><img src="./assets/img/footer watsapp.png" alt="img"
+            /></a>
+            <a href="#"
+              ><img src="./assets/img/footer telegram.png" alt="img"
+            /></a>
+            <a href="#"
+              ><img src="./assets/img/footer instagram.png" alt="img"
+            /></a>
           </div>
         </div>
 
@@ -419,10 +427,11 @@
           </div>
         </div>
 
-        <img src="./assets/img/map.png" alt="map" />
+        <img class="map-img" src="./assets/img/footer map img.png" alt="map" />
       </div>
 
       <div class="footer-bottom">© 2025 Senim Detox</div>
     </footer>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
